--- a/src/Makefile
+++ b/src/Makefile
@@ -4,7 +4,7 @@
 
 LDFLAGS =      /usr/lib64/liblapack.so.3 /usr/lib64/libblas.so.3      -lpthread 
 CPPFLAGS = -Werror -Wall  -IEngine -I../../PsimagLite/src -I../../PsimagLite/src/Geometry  \
- -IModels/HubbardOneOrbital
+ -IModels/HubbardOneOrbital -IModels/HeisenbergSpinOneHalf
 #CXX = g++  -O3 -DNDEBUG -g3
 #Comment out line below for debugging (COMMENT ALSO THE strip commands): 
 CXX = g++ -g3 #ALSO COMMENT OUT strip command below
